# risc0

./: Cargo.toml  WORKSPACE
examples/rust/counter/: BUILD.bazel  Cargo.toml  README.md
examples/rust/counter/binding/: counter.h  log_example.txt  main_static.go
examples/rust/counter/core/: BUILD.bazel  Cargo.toml
examples/rust/counter/core/src/: lib.rs
examples/rust/counter/src/: counterlib.rs
examples/rust/votingmachine/: BUILD.bazel  Cargo.toml
examples/rust/votingmachine/binding/: README.md  hello.h  log.txt  log_example.txt  main_static.go
examples/rust/votingmachine/binding/circuit/: freeze  freeze.id  init  init.id  submit  submit.id
examples/rust/votingmachine/core/: Cargo.toml
examples/rust/votingmachine/core/src/: lib.rs
examples/rust/votingmachine/src/: votinglib.rs
