[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayref = "0.3"
base64 = "0.13"
bincode = "1.3"
counter-core = { path = "./core" }
near-sdk = "3.1"
risc0-zkvm-host = { path = "../../../risc0/zkvm/sdk/rust/host"}
risc0-zkvm-verify = { path = "../../../risc0/zkvm/verify" }
risc0-zkvm-core= { path = "../../../risc0/zkvm/sdk/rust/core" }
risc0-zkvm-serde = { path = "../../../risc0/zkvm/sdk/rust/serde" }
serde = "1.0"
serde_json = "1.0"
libc = "0.2.2"
env_logger = "0.8.4"
log = "0.4.14"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
