load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_static_library", "rust_shared_library", "rust_test")

rust_binary(
    name = "votingmachine",
    srcs = ["src/main.rs"],
    deps = [":lib"],
)

rust_library(
    name = "lib",
    srcs = ["src/lib.rs"],
    proc_macro_deps = ["@crates_host//:ctor"],
    rustc_flags = ["-Coverflow-checks=on"],
    deps = [
        "//examples/rust/votingmachine/core:core_host",
        "//risc0/zkvm/sdk/rust/core:core_host",
        "//risc0/zkvm/sdk/rust/host",
        "//risc0/zkvm/sdk/rust/serde:serde_host",
        "@crates_host//:env_logger",
        "@crates_host//:log",
        "@crates_host//:libc",
        "@crates_host//:serde",
        "@crates_host//:serde_json",
    ],
)

rust_shared_library(
    name = "votinglib",
    srcs = ["src/votinglib.rs"],
    proc_macro_deps = ["@crates_host//:ctor"],
    rustc_flags = ["-Coverflow-checks=on"],
    data = [
        "//examples/rust/votingmachine/core:freeze",
        "//examples/rust/votingmachine/core:freeze.id",
        "//examples/rust/votingmachine/core:init",
        "//examples/rust/votingmachine/core:init.id",
        "//examples/rust/votingmachine/core:submit",
        "//examples/rust/votingmachine/core:submit.id",
    ],    
    deps = [
        "//examples/rust/votingmachine/core:core_host",
        "//risc0/zkvm/sdk/rust/core:core_host",
        "//risc0/zkvm/sdk/rust/host",
        "//risc0/zkvm/sdk/rust/serde:serde_host",
        "@crates_host//:env_logger",
        "@crates_host//:log",
        "@crates_host//:libc",
        "@crates_host//:serde",
        "@crates_host//:serde_json",
    ],
)

rust_test(
    name = "test",
    crate = ":lib",
    data = [
        "//examples/rust/votingmachine/core:freeze",
        "//examples/rust/votingmachine/core:freeze.id",
        "//examples/rust/votingmachine/core:init",
        "//examples/rust/votingmachine/core:init.id",
        "//examples/rust/votingmachine/core:submit",
        "//examples/rust/votingmachine/core:submit.id",
    ],
    rustc_flags = ["-Coverflow-checks=on"],
)
